fix: add mounting type of bind to source code

--- a/basic_compose/docker-compose.yml
+++ b/basic_compose/docker-compose.yml
@@ -4,5 +4,9 @@ services:
     build: .
     ports:
       - "8000:5000"
+    volumes:
+      - type: bind
+        source: .
+        target: /code
   redis:
     image: "redis:alpine"
