fix: add env as dev in flask

--- a/basic_compose/docker-compose.yml
+++ b/basic_compose/docker-compose.yml
@@ -8,5 +8,7 @@ services:
       - type: bind
         source: .
         target: /code
+    environment:
+      FLASK_ENV: development
   redis:
     image: "redis:alpine"
