--- a/django_mysql_celery_compose/docker-compose.yml
+++ b/django_mysql_celery_compose/docker-compose.yml
@@ -4,8 +4,6 @@ services:
     platform: linux/x86_64
     image: mysql:5.7
     container_name: db
-    ports:
-      - "3309:3306"
     environment:
       MYSQL_DATABASE: mysqldb
       MYSQL_USER: tester
@@ -15,4 +13,18 @@ services:
       - --character-set-server=utf8mb4
       - --collation-server=utf8mb4_unicode_ci
     volumes:
-      - ./data:/var/lib/mysql
+      - ./data/db:/var/lib/mysql
+  web:
+    build: .
+    command: python manage.py runserver 0.0.0.0:8000
+    volumes:
+      - .:/code
+    ports:
+      - "8000:8000"
+    environment:
+      MYSQL_DATABASE: mysqldb
+      MYSQL_USER: tester
+      MYSQL_PASSWORD: testerpass
+      MYSQL_ROOT_PASSWORD: rootpass
+    depends_on:
+      - db
