--- a/django_mysql_celery_compose/docker-compose.yml
+++ b/django_mysql_celery_compose/docker-compose.yml
@@ -41,3 +41,18 @@ services:
       - db
       - redis
       - web
+  periodic_producer:
+    restart: always
+    container_name: celery-beat
+    build:
+      context: .
+    command: celery -A composeexample beat -l info
+    volumes:
+      - .:/code
+    env_file:
+      - ./.env
+    depends_on:
+      - db
+      - redis
+      - web
+      - celery
