--- a/django_mysql_celery_compose/docker-compose.yml
+++ b/django_mysql_celery_compose/docker-compose.yml
@@ -27,7 +27,7 @@ services:
   redis:
     image: redis:alpine
     container_name: redis-server
-  celery:
+  consumer:
     restart: always
     container_name: celery-worker
     build:
@@ -49,4 +49,4 @@ services:
       - .:/code
     depends_on:
       - redis
-      - celery
+      - consumer
